--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -1,4 +1,14 @@
 .post_footer__comments__comment{
     padding-top:3px;
     font-size:13px;
-  }
+    white-space:pre-wrap;
+    width:calc(var(--post-width) - 30px);
+    word-wrap:break-word;
+}
+
+@media (max-width:768px){
+    .post_footer__comments__comment{
+        width:300px;
+    }
+    
+}
