--- a/src/components/[LEGADO] FormSign copy/FormSign.css
+++ b/src/components/[LEGADO] FormSign copy/FormSign.css
@@ -1,37 +1,4 @@
-:root{
-    --z-index--header:30;
-    --header-width:900px;
-    --text-color:#000;
-    --link-color:#000;
-  }
-  
-  *,
-  *::after,
-  *::before {
-    box-sizing: border-box;
-  }
-  
-  
-  body *{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    /*font-family: 'Montserrat', sans-serif;*/
-    font-family: "Segoe UI",Roboto,Helvetica,Arial,sans-serif; 
-  }
-  
-  body{
-    background:#FAFAFA;
-    margin:0;
-    padding:0;
-  }
-  
-  a{
-    text-decoration: none;
-    color:var(--link-color);
-  }
-
-  .form-sign{
+.form-sign{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -56,7 +23,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding:50px 40px 30px 40px;
+    padding:50px 40px;
     width:100%;
 }
 
@@ -123,9 +90,4 @@
 .link-text{
     color:#0095f6;   
     font-weight: 500;
-}
-
-.message{
-    padding-top:20px;
-    font-size:13px
 }
