--- a/src/pages/User/User.css
+++ b/src/pages/User/User.css
@@ -4,12 +4,15 @@
     align-items:center;
     padding: 30px 0;
   }
+
+/*
 @media (max-width:768px){
   #user{
-    /*padding:40px 10px*/
+    padding:40px 10px
   }
 }
-  
+*/
+
 .user__container{
     width:100%;
     max-width:var(--header-width);
@@ -32,6 +35,7 @@
     justify-content:center;
 }
 .user__photo__image{
+ 
     border:1px solid lightgray;
     border-radius:50%;
 }
